--- a/app/src/main/res/layout/chat_message_me.xml
+++ b/app/src/main/res/layout/chat_message_me.xml
@@ -10,7 +10,8 @@
         android:id="@+id/card_gchat_message_me"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="2dp"
+        android:layout_marginEnd="8dp"
         app:cardBackgroundColor="@color/colorPrimaryDark"
         app:cardCornerRadius="12dp"
         app:cardElevation="0dp"
@@ -34,7 +35,7 @@
                 android:paddingStart="12dp"
                 android:paddingTop="8dp"
                 android:paddingEnd="12dp"
-                android:text="Bence bu renk efsane"
+                android:text="B"
                 android:textColor="#ffffff"
                 android:textSize="16sp" />
 
@@ -42,9 +43,10 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="end"
+                android:orientation="horizontal"
+                android:paddingStart="10dp"
                 android:paddingEnd="10dp"
-                android:paddingBottom="7dp"
-                android:orientation="horizontal">
+                android:paddingBottom="7dp">
 
                 <TextView
                     android:id="@+id/text_gchat_timestamp_me"
@@ -59,8 +61,8 @@
                 <ImageView
                     android:layout_width="16dp"
                     android:layout_height="16dp"
-                    android:backgroundTint="#DDDDDD"
-                    android:background="@drawable/ic_baseline_done_all_24" />
+                    android:background="@drawable/ic_baseline_done_all_24"
+                    android:backgroundTint="#DDDDDD" />
             </LinearLayout>
         </LinearLayout>
 
