--- a/app/src/main/res/layout/chat_message_other.xml
+++ b/app/src/main/res/layout/chat_message_other.xml
@@ -10,7 +10,8 @@
         android:id="@+id/card_gchat_message_other"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="2dp"
         app:cardBackgroundColor="#eef1f6"
         app:cardCornerRadius="12dp"
         app:cardElevation="0dp"
@@ -33,7 +34,7 @@
                 android:paddingLeft="12dp"
                 android:paddingTop="8dp"
                 android:paddingRight="12dp"
-                android:text="akhjhdf smdfjkdsf sdkfhjkf sdkjfj ksjhfk kshdf ksjdhf"
+                android:text="a"
                 android:textColor="#000000"
                 android:textSize="16sp" />
 
@@ -42,6 +43,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="end"
+                android:paddingStart="10dp"
                 android:paddingEnd="10dp"
                 android:paddingBottom="7dp"
                 android:text="8:00"
