--- a/app/src/main/res/layout/activity_chat.xml
+++ b/app/src/main/res/layout/activity_chat.xml
@@ -46,13 +46,21 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="10dp"
-            android:textSize="15sp"
             android:layout_marginTop="6dp"
-            android:text="jdfksdhf jdskhf"
             android:textColor="#ffffff"
+            android:textSize="15sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@id/chat_profile_picture"
             app:layout_constraintTop_toTopOf="parent" />
+
+        <TextView
+            android:id="@+id/chat_is_online"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="10dp"
+            android:textColor="@color/white"
+            app:layout_constraintStart_toEndOf="@id/chat_profile_picture"
+            app:layout_constraintTop_toBottomOf="@id/chat_tool_bar_user_name" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
