--- a/app/src/main/res/layout/activity_chat.xml
+++ b/app/src/main/res/layout/activity_chat.xml
@@ -71,6 +71,8 @@
         android:layout_marginTop="2dp"
         android:layout_marginBottom="15dp"
         android:divider="@null"
+        android:transcriptMode="alwaysScroll"
+        android:stackFromBottom="true"
         app:layout_constraintBottom_toTopOf="@id/button"
         app:layout_constraintTop_toBottomOf="@id/chat_top_bar" />
 
