--- a/app/src/main/res/layout/fragment_giris.xml
+++ b/app/src/main/res/layout/fragment_giris.xml
@@ -67,7 +67,7 @@
         android:background="@drawable/custom_button"
         android:onClick="login"
         app:layout_constraintTop_toBottomOf="@id/editTextUserPassword"
-        android:text="Giriş"
+        android:text="Login"
         android:textAllCaps="false"
         android:textColor="@color/colorPrimary" />
 
