--- a/app/src/main/res/layout/fragment_giris.xml
+++ b/app/src/main/res/layout/fragment_giris.xml
@@ -32,6 +32,7 @@
         android:drawableStart="@drawable/custom_input_email"
         app:layout_constraintTop_toBottomOf="@id/imageViewLogo"
         android:hint="Email Address"
+        android:textSize="14sp"
         android:textColorHint="@android:color/darker_gray"
         android:inputType="textEmailAddress" />
 
@@ -52,6 +53,7 @@
         app:layout_constraintTop_toBottomOf="@id/editTextUserName"
         android:hint="Password"
         android:textColorHint="@android:color/darker_gray"
+        android:textSize="14sp"
         android:inputType="textPassword" />
 
     <Button
