--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -17,7 +17,9 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
-        android:background="?android:attr/windowBackground"
+        android:background="@color/black"
+        android:paddingBottom="15dp"
+        app:itemTextColor="@color/colorPrimary"
         app:menu="@menu/bottom_navigation" />
 
 </RelativeLayout>
