--- a/app/src/main/res/layout/fragment_kaydol.xml
+++ b/app/src/main/res/layout/fragment_kaydol.xml
@@ -21,6 +21,7 @@
         android:layout_width="0dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        android:textSize="14sp"
         android:layout_marginStart="35dp"
         android:drawablePadding="10dp"
         android:paddingStart="8dp"
@@ -45,6 +46,7 @@
         android:layout_marginTop="10dp"
         android:textColor="@drawable/custom_text_color"
         android:drawablePadding="10dp"
+        android:textSize="14sp"
         android:layout_height="45dp"
         android:background="@drawable/custom_input"
         app:layout_constraintTop_toBottomOf="@id/editTextName"
@@ -62,6 +64,7 @@
         android:layout_marginTop="10dp"
         android:textColor="@drawable/custom_text_color"
         android:drawablePadding="10dp"
+        android:textSize="14sp"
         android:layout_height="45dp"
         android:background="@drawable/custom_input"
         app:layout_constraintTop_toBottomOf="@id/editTextSurname"
@@ -78,6 +81,7 @@
         android:layout_marginEnd="35dp"
         android:paddingStart="8dp"
         android:layout_marginTop="10dp"
+        android:textSize="14sp"
         android:textColor="@drawable/custom_text_color"
         android:drawablePadding="10dp"
         android:layout_height="45dp"
