--- a/app/src/main/res/layout/activity_chat.xml
+++ b/app/src/main/res/layout/activity_chat.xml
@@ -10,7 +10,7 @@
         android:id="@+id/chat_top_bar"
         android:layout_width="match_parent"
         android:layout_height="55dp"
-        android:background="@color/colorPrimaryDark"
+        android:background="@color/black"
         app:layout_constraintTop_toTopOf="parent">
 
         <ImageView
@@ -19,7 +19,7 @@
             android:layout_height="25dp"
             android:layout_marginStart="2dp"
             android:background="@drawable/ic_baseline_arrow_back_24"
-            android:backgroundTint="@color/white"
+            android:backgroundTint="@color/colorPrimary"
             android:onClick="goBack"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -47,7 +47,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="10dp"
             android:layout_marginTop="6dp"
-            android:textColor="#ffffff"
+            android:textColor="@color/colorPrimary"
             android:textSize="15sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@id/chat_profile_picture"
@@ -58,7 +58,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="10dp"
-            android:textColor="@color/white"
+            android:textColor="@color/colorPrimary"
             app:layout_constraintStart_toEndOf="@id/chat_profile_picture"
             app:layout_constraintTop_toBottomOf="@id/chat_tool_bar_user_name" />
 
@@ -98,7 +98,7 @@
         android:layout_height="wrap_content"
         android:layout_marginEnd="10dp"
         android:layout_marginBottom="15dp"
-        android:background="@color/colorPrimaryDark"
+        android:background="@color/colorPrimary"
         android:onClick="sendMessageButton"
         android:text="send"
         android:textColor="@color/white"
