--- a/app/src/main/res/layout/chat_message_me.xml
+++ b/app/src/main/res/layout/chat_message_me.xml
@@ -12,7 +12,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="2dp"
         android:layout_marginEnd="8dp"
-        app:cardBackgroundColor="@color/colorPrimaryDark"
+        app:cardBackgroundColor="@color/black"
         app:cardCornerRadius="12dp"
         app:cardElevation="0dp"
         app:cardPreventCornerOverlap="false"
@@ -36,7 +36,7 @@
                 android:paddingTop="8dp"
                 android:paddingEnd="12dp"
                 android:text="B"
-                android:textColor="#ffffff"
+                android:textColor="@android:color/darker_gray"
                 android:textSize="16sp" />
 
             <LinearLayout
@@ -55,7 +55,7 @@
                     android:layout_gravity="end|bottom"
                     android:paddingEnd="4dp"
                     android:text="10:00"
-                    android:textColor="#E2E2E2"
+                    android:textColor="@android:color/darker_gray"
                     android:textSize="10sp" />
 
                 <ImageView
