--- a/app/src/main/res/layout/chat_message_me.xml
+++ b/app/src/main/res/layout/chat_message_me.xml
@@ -1,10 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginTop="16dp"
     android:layout_marginEnd="8dp">
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="sample"
+        android:id="@+id/historyMessageMe"
+        tools:ignore="MissingConstraints"></TextView>
 
     <androidx.cardview.widget.CardView
         android:id="@+id/card_gchat_message_me"
@@ -19,6 +27,8 @@
         app:cardUseCompatPadding="true"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent">
+
+
 
         <LinearLayout
             android:id="@+id/layout_gchat_container_me"
