--- a/app/src/main/res/layout/chat_message_other.xml
+++ b/app/src/main/res/layout/chat_message_other.xml
@@ -18,6 +18,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginBottom="20dp"
         tools:text="155454"
         tools:ignore="MissingConstraints"></TextView>
 
@@ -26,14 +27,15 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="2dp"
         app:cardBackgroundColor="#eef1f6"
         app:cardCornerRadius="12dp"
         app:cardElevation="0dp"
         app:cardPreventCornerOverlap="false"
         app:cardUseCompatPadding="true"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        app:layout_constraintTop_toBottomOf="@id/historyMessageOther"
+        app:layout_goneMarginTop="2dp">
 
         <LinearLayout
             android:id="@+id/layout_gchat_container_other"
