--- a/app/src/main/res/layout/chat_message_me.xml
+++ b/app/src/main/res/layout/chat_message_me.xml
@@ -16,6 +16,7 @@
         app:layout_constraintBottom_toTopOf="@id/card_gchat_message_me"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginBottom="20dp"
         app:layout_constraintTop_toTopOf="parent"
         tools:text="155454"
         tools:ignore="MissingConstraints"></TextView>
@@ -24,7 +25,7 @@
         android:id="@+id/card_gchat_message_me"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="2dp"
         android:layout_marginEnd="8dp"
         app:cardBackgroundColor="@color/black"
         app:cardCornerRadius="12dp"
@@ -32,7 +33,8 @@
         app:cardPreventCornerOverlap="false"
         app:cardUseCompatPadding="true"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        app:layout_constraintTop_toBottomOf="@id/historyMessageMe"
+        app:layout_goneMarginTop="2dp">
 
         <LinearLayout
             android:id="@+id/layout_gchat_container_me"
