--- a/app/src/main/res/layout/activity_chat.xml
+++ b/app/src/main/res/layout/activity_chat.xml
@@ -19,7 +19,7 @@
             android:layout_height="25dp"
             android:layout_marginStart="2dp"
             android:background="@drawable/ic_baseline_arrow_back_24"
-            android:backgroundTint="@color/colorPrimary"
+            android:backgroundTint="@color/white"
             android:onClick="goBack"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -47,7 +47,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="10dp"
             android:layout_marginTop="6dp"
-            android:textColor="@color/colorPrimary"
+            android:textColor="@color/white"
             android:textSize="15sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@id/chat_profile_picture"
@@ -58,7 +58,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="10dp"
-            android:textColor="@color/colorPrimary"
+            android:textColor="@color/white"
             app:layout_constraintStart_toEndOf="@id/chat_profile_picture"
             app:layout_constraintTop_toBottomOf="@id/chat_tool_bar_user_name" />
 
@@ -86,7 +86,7 @@
         android:autofillHints=""
         android:ems="10"
         android:gravity="start|top"
-        android:hint="your message here"
+        android:hint="Your message"
         android:inputType="textMultiLine"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@id/button"
@@ -94,14 +94,13 @@
 
     <Button
         android:id="@+id/button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="35dp"
+        android:layout_height="35dp"
         android:layout_marginEnd="10dp"
-        android:layout_marginBottom="15dp"
-        android:background="@color/colorPrimary"
+        android:layout_marginBottom="20dp"
+        android:background="@drawable/ic_baseline_send_24"
+        android:backgroundTint="@color/black"
         android:onClick="sendMessageButton"
-        android:text="send"
-        android:textColor="@color/white"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
