--- a/app/src/main/res/layout/chat_message_me.xml
+++ b/app/src/main/res/layout/chat_message_me.xml
@@ -52,7 +52,7 @@
                 android:paddingTop="8dp"
                 android:paddingEnd="12dp"
                 android:text="B"
-                android:textColor="@android:color/darker_gray"
+                android:textColor="@color/white"
                 android:textSize="16sp" />
 
             <LinearLayout
