--- a/app/src/main/res/menu/bottom_navigation.xml
+++ b/app/src/main/res/menu/bottom_navigation.xml
@@ -3,10 +3,10 @@
 
     <item
         android:id="@+id/nav_giris"
-        android:title="Giriş" />
+        android:title="Login" />
     <item
         android:id="@+id/nav_kaydol"
-        android:title="Kaydol" />
+        android:title="Register" />
 
 
 </menu>
