--- a/app/src/main/res/menu/menu.xml
+++ b/app/src/main/res/menu/menu.xml
@@ -3,7 +3,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android">
     <item
         android:id="@+id/exit"
-        android:title="Çıkış Yap">
+        android:title="Sign out">
 
     </item>
 </menu>
